--- a/gatsby-philipps-foam-theme/src/components/note-wrapper.css
+++ b/gatsby-philipps-foam-theme/src/components/note-wrapper.css
@@ -1,5 +1,3 @@
-
-
 .note-container .obstructed-label {
   display: block;
   text-decoration: none;
@@ -40,8 +38,8 @@
     transition: box-shadow 100ms linear, opacity 75ms linear,
       transform 200ms cubic-bezier(0.19, 1, 0.22, 1);
     flex-shrink: 0;
-    width: 625px;
-    max-width: 625px;
+    width: calc(var(--note-width) * 1px);
+    max-width: calc(var(--note-width) * 1px);
     top: 0px;
     position: sticky;
     flex-grow: 1;
